--- a/projects/css-projects/1.education-school-website/src/style.css
+++ b/projects/css-projects/1.education-school-website/src/style.css
@@ -6,8 +6,6 @@
     box-sizing: border-box;
 }
 
-
-
 /* 
 * decalring an css varible 
 * We declared css varible inside :root(pseudo-class) which is used to target the root element of the document i.e html element.
@@ -312,50 +310,51 @@ header {
 
 /* ================================================== FAQs ========================================== */
 
-.faqs{
+.faqs {
     background-color: var(--color-bg1);
-    box-shadow: inset 0 0 3rem rgba(0,0,0,0.5);
+    box-shadow: inset 0 0 3rem rgba(0, 0, 0, 0.5);
 }
 
- .faqs__container{
+.faqs__container {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 1rem;
 }
 
-.faq{
+.faq {
     padding: 2rem;
     background-color: var(--color-primary);
     display: flex;
-    height:fit-content;
+    height: fit-content;
     gap: 1.4rem;
     cursor: pointer;
 }
 
-.faq h4{
+.faq h4 {
     font-size: 1rem;
     line-height: 2.2;
 }
 
-.faq__icon{
+.faq__icon {
     font-size: 1.2rem;
 }
 
-.faq p{
+.faq p {
     margin-top: 0.8rem;
     display: none;
 }
-.faq.open p{
+
+.faq.open p {
     display: block;
 }
 
 /* ================================================== Testimonials ========================================== */
 
-.testimonial{
+.testimonial {
     padding-top: 2rem;
 }
 
-.avatar{
+.avatar {
     width: 6rem;
     height: 6rem;
     /* *This will make circle */
@@ -365,63 +364,270 @@ header {
     border: 1rem solid var(--color-bg1);
 }
 
-.testimonial__info{
+.testimonial__info {
     text-align: center;
 }
 
-.testimonial__body{
+.testimonial__body {
     background-color: var(--color-primary);
     margin-top: 3rem;
     padding: 2rem;
     position: relative;
 }
+
 /* displaying upward arrow sign type */
-.testimonial__body::before{
+.testimonial__body::before {
     content: "";
     display: block;
     height: 3rem;
     width: 3rem;
-    background-image: linear-gradient(130deg,transparent,var(--color-primary),var(--color-primary));
+    background-image: linear-gradient(130deg, transparent, var(--color-primary), var(--color-primary));
     position: absolute;
     top: 0;
-    left :50%;
-    transform:translate(-50%,-50%) rotate(45deg);
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(45deg);
 }
+
 /* ================================================== FOOTER ========================================== */
-footer{
+footer {
     background-color: var(--color-bg1);
     padding-top: 5rem;
 }
-.footer__container{
+
+.footer__container {
     display: grid;
-    grid-template-columns: repeat(4,1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 5rem;
 }
 
-.footer__container > div h4{
-    margin-bottom: 1.2rem;;
-} 
+.footer__container > div h4 {
+    margin-bottom: 1.2rem;
+    ;
+}
 
-.footer__1 p{
+.footer__1 p {
     margin-bottom: 2rem;
 }
 
-footer ul li{
+footer ul li {
     margin-bottom: 0.7rem;
     transition: var(--transition);
 }
 
-footer ul li a:hover{
+footer ul li a:hover {
     text-decoration: underline;
 }
 
-.footer__socials{
+.footer__socials {
     display: flex;
-    gap:2rem;
+    gap: 2rem;
     font-size: 1.2rem;
-    margin-top:2rem;
+    margin-top: 2rem;
 }
 
-.footer__copyright{
+.footer__copyright {
     text-align: center;
+}
+
+/* * ===============================MEDIA QUERIES (TABLETS)======================  */
+
+/* * any thing below 1024px till 1024px*/
+@media screen and (max-width: 1024px) {
+
+    .container {
+        width: var(--container-width-md);
+    }
+
+    h1 {
+        font-size: 2.2rem;
+    }
+
+    h2 {
+        font-size: 1.7rem;
+    }
+
+    h3 {
+        font-size: 1.4rem;
+    }
+
+    h4 {
+        font-size: 1.2rem;
+    }
+
+    /* *=========================== NAVBAR ============================= */
+    nav button {
+        display: inline-block;
+        background-color: transparent;
+        color: var(--color-white);
+        font-size: 1.8rem;
+        cursor: pointer;
+    }
+
+    nav button#close-menu-btn {
+        display: none;
+    }
+
+    .nav__menu {
+        position: fixed;
+        top: 5rem;
+        right: 5%;
+        height: fit-content;
+        width: 18rem;
+        flex-direction: column;
+        gap: 0;
+        display: none;
+    }
+
+
+    .nav__menu li {
+        width: 100%;
+        height: 5.8rem;
+        animation: animatedNavitems 400ms ease-in-out forwards;
+        opacity: 0;
+    }
+
+    .nav__menu li:nth-child(2) {
+        animation-delay: 400ms;
+    }
+
+    .nav__menu li:nth-child(3) {
+        animation-delay: 800ms;
+    }
+
+    .nav__menu li:nth-child(4) {
+        animation-delay: 1200ms;
+    }
+
+    @keyframes animatedNavitems {
+        0% {
+            transform: rotateX(90deg);
+        }
+
+        100% {
+            transform: rotateX(0deg);
+            opacity: 1;
+        }
+
+    }
+
+    .nav__menu li a {
+        background-color: var(--color-primary);
+        box-shadow: inset 3rem 4rem 5rem rgba(0, 0, 0, 0.4);
+        width: 100%;
+        height: 100%;
+        display: grid;
+        place-items: center;
+    }
+
+    .nav__menu li a:hover {
+        background-color: var(--color-bg2);
+        color: var(--color-white);
+    }
+
+    /* *=========================== HEADER ============================= */
+    header {
+        height: 58vh;
+        margin-bottom: 4rem;
+    }
+
+    .header__container {
+        gap: 0rem;
+    }
+
+    /* *=========================== CATEGORIES ============================= */
+
+    .categories {
+        height: auto;
+    }
+
+    .categories__container {
+        grid-template-columns: 1fr;
+        gap: 3rem;
+    }
+
+    .categories__left {
+        margin-left: 0;
+    }
+
+    /* *=========================== COURSES ============================= */
+
+    .courses {
+        margin: 0;
+    }
+
+    .courses__container {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    /* *=========================== FAQs ============================= */
+
+    .faqs__container {
+        grid-template-columns: 1fr;
+    }
+
+    .faq {
+        padding: 1.5rem;
+    }
+
+    /* *=========================== FOOTER ============================= */
+    .footer__container {
+        grid-template-columns: 1fr 1fr;
+        gap: 3rem;
+    }
+}
+
+/* ================================MEDIA QUERIES (PHONES)=============== */
+
+@media screen and (max-width:600px) {
+    .container {
+        width: var(--container-width-sm);
+    }
+
+    /* *=========================== NAVBAR=========================== */
+    .nav__menu {
+        right: 3%;
+    }
+
+    /* *=========================== HEADER ============================= */
+    header {
+        height: 100vh;
+    }
+
+    .header__container {
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
+
+    /* *=========================== CATEGORIES ============================= */
+
+    .categories__left {
+        text-align: center;
+    }
+
+    .categories__right {
+        grid-template-columns: 1fr 1fr;
+        gap: 0.7rem
+    }
+
+    /* *=========================== POPULAR COURSE ============================= */
+
+    .courses__container {
+        grid-template-columns: 1fr;
+    }
+
+    /* *=========================== FOOTER  ============================= */
+    .footer__container {
+        grid-template-columns: 1fr;
+        text-align: center;
+        place-content: center;
+        gap: 2rem;
+    }
+
+    .footer__1 p {
+        margin: 1rem auto;
+    }
+
+    .footer__socials {
+        justify-content: center;
+    }
 }
