--- a/projects/css-projects/3.time-tracking-dashboard-main/style.css
+++ b/projects/css-projects/3.time-tracking-dashboard-main/style.css
@@ -31,90 +31,179 @@ body {
 
 a {
     text-decoration: none;
-    color: var(--color-text)
 }
 
-.bottom {
-    color: var(--color-text-hover);
-}
 
-.status {
-    color: var(--color-text);
-}
-
-.dashboard {
-    width: 80%;
-    height: 50%;
-    margin: 0 auto;
+section {
+    max-width: 63rem;
+    min-width: 45rem;
+    height: 45%;
+    min-height: 400px;
+    max-height: 450px;
+    margin: auto;
     transform: translate(0, 50%);
 }
 
 .dashboard__container {
     height: 100%;
+    margin: 0 1rem;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    align-items: end;
-    gap: 2rem
+    gap: 1rem;
 }
 
-/* *=====================================================subject container======================= */
-.subject__container {
-    grid-row: 1/3;
-    align-self: stretch;
-    background-color: var(--color-bg2);
-    border-radius: 2rem;
+.dashboard__card,
+.dashboard__maincard {
+
+    border-radius: 1rem;
 }
 
-.subject__main,
-.subject__reports {
-    padding: 1rem 0 0 2rem;
-}
-
-.container__element {
-    border: 1px solid black;
+.dashboard__maincard {
     height: 100%;
+    grid-row: 1/3;
+    background-color: var(--color-bg2);
 }
 
-.subject__main {
-    height: 70%;
-    border-radius: 2rem;
+.dashboard__maincard-top {
+    height: 65%;
+    padding: 0rem 2rem;
+    border-radius: 1rem;
+    border: 1px solid black;
     background-color: var(--color-primary);
 }
 
-.subject__avatar {
-    width: 6rem;
-    margin: 1rem 0 3rem 0;
-    padding: .2rem .2rem 0 .2rem;
+.dashboard__maincard-top-image {
+    width: 5rem;
+    padding: 0.2rem 0.2rem 0 0.2rem;
     border-radius: 50%;
-
+    margin-top: 2rem;
     background-color: white;
 }
 
-.subject__avatar img {
+.dashboard__maincard-top-image img {
     width: 100%;
 }
 
-.subject__desc>p {
+.dashboard__maincard-top-info {
+    margin-top: 1rem;
+}
+
+.dashboard__maincard-top-info p {
     color: var(--color-text);
-    font-size: 1.4rem;
+    font-weight: 400;
+
 }
 
-.subject__name p {
+.dashboard__maincard-top-name p {
+    margin-top: 1rem;
     color: var(--color-text-hover);
-    margin: 0.3rem 0;
-    font-size: 3rem;
+    width: min-content;
+    font-size: 2rem;
+    font-weight: 200;
 }
 
-.subject__reports {
+.dashboard__maincard-bottom {
+    height: 35%;
+    padding: 0.2rem 2rem;
+    border-radius: 0 0 1rem 1rem;
+
+}
+
+.dashboard__maincard-bottom-item {
+    margin-top: 1rem;
+}
+
+.dashboard__maincard-bottom-item a {
+    color: var(--color-text);
+}
+
+.dashboard__maincard-bottom-item a:hover {
+    color: var(--color-text-hover);
+}
+
+.work-card {
+    width: 100%;
+    height: 100%;
+    background: var(--color-work) url("./images/icon-work.svg") top right no-repeat;
+    position: relative;
+}
+
+.play-card {
+    width: 100%;
+    height: 100%;
+    background: var(--color-play) url("./images/icon-play.svg") top right no-repeat;
+    position: relative;
+}
+
+.study-card {
+    width: 100%;
+    height: 100%;
+    background: var(--color-study) url("./images/icon-study.svg") top right no-repeat;
+    position: relative;
+}
+
+.exercise-card {
+    width: 100%;
+    height: 100%;
+    background: var(--color-exercise) url("./images/icon-exercise.svg") top right no-repeat;
+    position: relative;
+}
+
+.social-card {
+    width: 100%;
+    height: 100%;
+    background: var(--color-social) url("./images/icon-social.svg") top right no-repeat;
+    position: relative;
+}
+
+.selfcare-card {
+    width: 100%;
+    height: 100%;
+    background: var(--color-selfcare) url("./images/icon-self-care.svg") top right no-repeat;
+    position: relative;
+}
+
+.work-card__info,
+.play-card__info,
+.study-card__info,
+.exercise-card__info,
+.social-card__info,
+.selfcare-card__info {
+    width: 100%;
+    height: 80%;
     background-color: var(--color-bg2);
-    height: 30%;
-    border-radius: 2rem;
+    position: absolute;
+    bottom: -2px;
+    border-radius: 1rem;
+
 }
 
-.subject__reports div {
-    padding-top: 1rem;
+.dashboard__card p,
+.dashboard__card span {
+    color: var(--color-text-hover);
 }
 
-.subject__reports div a {
-    font-size: 1.3rem;
+.card__info-activity {
+    display: flex;
+    justify-content: space-between;
+    margin: 1.5rem;
+}
+
+.card__info-time {
+    margin: 1.5rem 0 1rem 1.5rem;
+    font-size: 2.5rem;
+}
+
+.card__info-status {
+    margin-left: 1.5rem;
+    color: var(--color-text);
+}
+
+.attribution {
+    min-width: 15rem;
+    color: white;
+    position: absolute;
+    bottom: 0.5rem;
+    left: 50%;
+    transform: translate(-50%, 0);
 }
