completed css basics units

--- a/tech/CSS/6.display-position/style.css
+++ b/tech/CSS/6.display-position/style.css
@@ -40,7 +40,7 @@ span {
     height: 100px;
 }
 
-/* *===================================================================== Positioned Element============================================================ */
+/* *===================================================================== PositionedElement============================================================ */
 body {
     height: 2020px;
 }
