completed calender assignment

--- a/tech-projects/CSS/4.calender-component/style.css
+++ b/tech-projects/CSS/4.calender-component/style.css
@@ -10,6 +10,8 @@ body {
     width: 100%;
     height: 100%;
     background-color: gray;
+    font-size: 16px;
+    font-family: "Playwrite NG Modern", cursive;
 }
 
 :root {
@@ -19,15 +21,14 @@ body {
 }
 
 .container {
-    max-width: 25rem;
-    min-width: 20rem;
-    height: 60%;
+    max-width: 25%;
+    min-width: 30rem;
+    max-height: 50rem;
+    min-height: 45rem;
     margin: auto;
 }
 
 .card {
-    max-width: 25rem;
-    min-width: 15rem;
     height: 100%;
     margin: 0.8rem;
     border-radius: 1rem;
@@ -37,20 +38,20 @@ body {
 
 .card__top {
     height: 35%;
-    background: var(--color-blue);
+    padding: 1.3rem 1rem 1rem 2rem;
     border-radius: 1rem 1rem 0 0;
+    background: var(--color-blue);
     display: flex;
     justify-content: space-between;
-    padding: 1rem 1rem 0 2rem;
 }
 
 .card__top-left {
     color: var(--color-white);
+    height: 100%;
 }
 
 .card__top-date {
     font-size: 5rem;
-
 }
 
 .card__top-month {
@@ -59,6 +60,7 @@ body {
 }
 
 .card__top-right {
+    height: 100;
     margin: 1rem;
     color: var(--color-white);
     font-size: 1.3rem;
@@ -81,4 +83,80 @@ body {
 .card__top-right i {
     margin-bottom: 0.8rem;
     animation: scale-animation 2s infinite ease-in-out;
+}
+
+/* * Card bottom */
+.card__bottom {
+    height: 65%;
+}
+
+.card__bottom-top {
+    height: 18%;
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+
+
+.left-arrow,
+.right-arrow {
+    border-radius: 50%;
+    border: none;
+}
+
+.left-arrow i,
+.right-arrow i {
+    font-size: 2rem;
+    color: var(--color-primary);
+
+}
+
+.card__bottom-top span {
+    font-size: 1rem;
+}
+
+.card__bottom-down {
+    height: 82%;
+    padding: 2rem;
+    border-top: 1px solid gray;
+    border-radius: 0 0 1rem 1rem;
+}
+
+.card__down-weekdays {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.card__down-dates {
+    height: 80%;
+}
+
+.card__down-dates div {
+    display: flex;
+    justify-content: space-evenly;
+    gap: 1rem 0;
+    margin-bottom: 1.2rem;
+}
+
+.card__down-dates div span {
+    width: 2rem;
+    text-align: center;
+}
+
+@media only screen and (max-width:500px) {
+    .container {
+        max-width: 20%;
+        min-width: 20rem;
+        height: 60%;
+    }
+
+    .card__down-weekdays {
+        margin-bottom: 0.5rem;
+    }
+
+    .card__down-dates div {
+        margin-bottom: 0.8rem;
+    }
 }
